--- a/style.css
+++ b/style.css
@@ -4,8 +4,6 @@ html, body {
   
 }
 
-
-
 .navbar {
    padding: 20px !important;
 }
@@ -14,6 +12,11 @@ html, body {
     margin-bottom: 50px ;
 }
 
+.logo {
+    font-family: "raleway";
+    font-size: 40px;
+    margin-bottom: 35px;
+}
 
 .card-top {
     width: 22rem;
@@ -21,8 +24,7 @@ html, body {
     height: 100%;
     margin: 0 auto;
     display: block;
-    margin-bottom: 50px;
-  
+    margin-bottom: 50px;  
 }
 
 .card-bottom {
@@ -31,10 +33,9 @@ html, body {
     height: 100%;
     margin: 0 auto;
     display: block;
-    margin-bottom: 50px;
-
-  
+    margin-bottom: 50px; 
 }
+
 .card-text{
     font-weight: 100;
     font-family: 'Raleway' !important;
@@ -50,13 +51,9 @@ html, body {
     display: flex;
     flex-wrap: wrap;  
     justify-content: space-between;
-    padding-top: 30px;
-  
-   
-    
-    
-    
+    padding-top: 30px;    
  }
+
 
  .image {
      width: 200px;
@@ -70,10 +67,10 @@ html, body {
  #show-news-image{
     margin: 0 auto;
     display: block;
-    width: 90%;
-   
+    width: 90%; 
  }
 
+ 
  #show-news-image h1, h3, h5, h6{
     font-family: 'Raleway' !important;
  }
