--- a/style.css
+++ b/style.css
@@ -70,7 +70,19 @@ html, body {
     width: 90%; 
  }
 
- 
+
  #show-news-image h1, h3, h5, h6{
     font-family: 'Raleway' !important;
  }
+
+ @media(max-width: 767px){
+     #show-news1, #show-news2, #show-news3 {
+         padding-bottom: 20px !important;
+     }
+     #bottom-left{
+        margin-bottom: 20px !important;
+    }
+ }
+    
+
+ 
