--- a/style.css
+++ b/style.css
@@ -9,10 +9,10 @@ html, body {
 }
 
 .navbar {
-    padding:  20px 50px !important;
+    padding:  15px 50px !important;
     background-color: #1d1d1d !important;
     color: white !important;
-    margin-bottom: 20px;
+    
  }
 
  .navbar-brand {
@@ -100,12 +100,58 @@ html, body {
     font-family: 'Raleway' !important;
  }
 
+ .hero {
+     width: 100% !important;
+     padding: 0px !important;
+     margin: 0px !important;
+     
+    
+ }
+
+ .hero-img {
+     position: relative; 
+     height: 600px !important;
+     width: 100%;
+ }
+
+ .hero-text {
+     position: absolute;
+     top: 20%;
+     width: 60%;
+     left: 20%;
+     font-size: 70px;
+     color: white;
+     font-family: 'Raleway' !important;
+     font-weight: bolder;
+
+ }
+
  @media(max-width: 767px){
      #show-news1, #show-news2, #show-news3 {
          padding-bottom: 20px !important;
      }
+     #news-min, #news-mid, #news-max {
+         padding-bottom: 30px !important;
+     }
      #bottom-left{
-        margin-bottom: 20px !important;
+        margin-bottom: 30px !important;
+    }
+
+    .hero {
+        height: 700px;
+
+    }
+
+    .hero-text {
+        position: absolute;
+        top: 20%;
+        width: 40%;
+        left: 20%;
+        font-size: 40px;
+        color: white;
+        font-family: 'Raleway' !important;
+        font-weight: bolder;
+   
     }
  }
     
