fixed margins and added footer

--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 html, body {
     position: relative;
-    overflow-x: hidden;
-  
+    overflow-x: hidden; 
 }
 
 .overall-div {
-    padding: 0 40px !important;
+    padding: 0 15px !important;
 }
 
 .navbar {
@@ -64,6 +63,8 @@ html, body {
 
 .card-title {
     font-family: 'Raleway' !important;
+    font-weight: bolder !important;
+    font-size: 30px !important;
 }
 
 .card-dark {
@@ -110,8 +111,9 @@ html, body {
 
  .hero-img {
      position: relative; 
-     height: 600px !important;
+     height: 700px !important;
      width: 100%;
+     margin-bottom: 100px;
  }
 
  .hero-text {
@@ -126,6 +128,85 @@ html, body {
 
  }
 
+ .height {
+     width: 100% !important;
+     height: 22rem !important;
+ }
+
+ .card-img {
+     height: 502px !important;
+ }
+
+
+
+footer {
+    background-color: #162838;
+    width: 100%;
+    height: 400px;
+    font-family: 'Raleway';
+  
+  }
+  
+  .email-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 20vh;
+  }
+  
+  .email-footer input {
+    width: 280px;
+    padding: 15px;
+    border: 1px solid white;
+    background-color: #162838;
+    color: white;
+  }
+  .email-footer button {
+    width: 150px;
+    background-color: #e52992;
+    padding: 15px;
+    border: none;
+    color: white;
+    font-weight: 600;
+  }
+
+  
+  .social {
+    color: white;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 18px;
+  
+  }
+  .fab {
+    padding: 10px;
+    font-size: 28px;
+  }
+
+  .hours {
+  
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      color: white;
+  }
+
+  .copy {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+  
+  }
+  
+  .copy h6 {
+    font-size: 10px;
+  }
+
  @media(max-width: 767px){
      #show-news1, #show-news2, #show-news3 {
          padding-bottom: 20px !important;
@@ -137,8 +218,8 @@ html, body {
         margin-bottom: 30px !important;
     }
 
-    .hero {
-        height: 700px;
+    .hero-img {
+        height: 400px !important;
 
     }
 
@@ -153,6 +234,12 @@ html, body {
         font-weight: bolder;
    
     }
+
+    /* .card-column {
+        margin: 0 auto !important;
+        display: block !important;
+        width: 60% !important;
+    } */
  }
     
 
