--- a/movies/movie.css
+++ b/movies/movie.css
@@ -28,6 +28,7 @@
     margin: 0 auto;
 
 }
+
 .search-bar {
   display: flex !important;
   justify-content: center !important;
@@ -35,12 +36,13 @@
   flex-direction: column;
   
 }
+
 .text-light{
     font-family: "raleway";
 }
 
 .search-bar input {
-    width: 400px !important;
+    width: 80% !important;
     padding: 8px;
     border-radius: 8px;
     font-family: "raleway";
@@ -50,13 +52,21 @@
 
 .fas {
     font-size: 30px;
-    color: maroon;
-    
-  
+    color: maroon; 
 }
 
 .show-movies h5 {
-    font-size: 30px !important;
+    font-size: 40px !important;
     font-family: 'raleway';
     font-weight: bolder !important;
+    
+}
+
+.show-movies p {
+    font-family: "Comic Sans MS", cursive, sans-serif;;
+}
+
+.card {
+    border-radius: 10px !important;
+    border-left: 9px solid maroon !important;
 }
