--- a/books/books.css
+++ b/books/books.css
@@ -66,13 +66,18 @@ h1 {
     
 }
 
+.image {
+    width: 300px;
+    height: 450px;
+}
+
 
  @media(max-width: 767px){
     .book-text {
        display: flex;
        flex-direction: column;
        justify-content: center;
-       margin-top: 55px !important;
+       margin-top: 45px !important;
     
      } 
 
@@ -83,7 +88,7 @@ h1 {
     }
 
     .book {
-        margin-bottom: 40px !important;
+        margin-bottom: 50px !important;
     }
 
     h1 {
