--- a/movies/movie.css
+++ b/movies/movie.css
@@ -7,7 +7,7 @@
     padding:  15px 50px !important;
     background-color: #1d1d1d !important;
     color: white !important;
-    margin-bottom: 40px;
+    margin-bottom: 0px !important;
     
  }
 
@@ -34,6 +34,7 @@
   justify-content: center !important;
   align-items: center !important;
   flex-direction: column;
+  
   
 }
 
