--- a/books/books.css
+++ b/books/books.css
@@ -67,6 +67,76 @@ hr {
     margin-bottom: 20px !important;
 }
 
+
+footer {
+    background-color: #162838;
+    width: 100%;
+    height: 500px;
+    font-family: 'Raleway';
+  
+  }
+  
+  .email-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 20vh;
+  }
+  
+  .email-footer input {
+    width: 200px;
+    padding: 15px;
+    border: 1px solid white;
+    background-color: #162838;
+    color: white;
+  }
+  .email-footer button {
+    width: 80px;
+    background-color: #e52992;
+    padding: 10px;
+    border: none;
+    color: white;
+    font-weight: 400;
+    font-size: 10px;
+  }
+
+  
+  .social {
+    color: white;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 18px;
+  
+  }
+  .fab {
+    padding: 10px;
+    font-size: 28px;
+  }
+
+  .hours {
+  
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      color: white;
+  }
+
+  .copy {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+  
+  }
+  
+  .copy h6 {
+    font-size: 10px;
+  }
+
  @media(max-width: 767px){
     .book-text {
        display: flex;
