--- a/movies/movie.css
+++ b/movies/movie.css
@@ -20,7 +20,7 @@
  .navbar-nav li a{
      color: white !important;
      font-family: "raleway";
-     font-size: 20px !important;
+     font-size: 17px !important;
      padding: 20px !important;
  }
 
@@ -28,7 +28,9 @@
     margin: 0 auto;
 
 }
-
+.barnes {
+  margin-top: 40px !important;
+}
 .search-bar {
   display: flex !important;
   justify-content: center !important;
@@ -59,8 +61,7 @@
 .show-movies h5 {
     font-size: 40px !important;
     font-family: 'raleway';
-    font-weight: bolder !important;
-    
+    font-weight: bolder !important;    
 }
 
 .show-movies p {
@@ -77,8 +78,7 @@ footer {
     background-color: #162838;
     width: 100%;
     height: 500px;
-    font-family: 'Raleway';
-  
+    font-family: 'Raleway'; 
   }
   
   .email-footer {
@@ -95,6 +95,7 @@ footer {
     background-color: #162838;
     color: white;
   }
+
   .email-footer button {
     width: 80px;
     background-color: #e52992;
@@ -112,16 +113,15 @@ footer {
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 18px;
-  
+    margin-bottom: 18px; 
   }
+
   .fab {
     padding: 10px;
     font-size: 28px;
   }
 
   .hours {
-  
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -135,7 +135,6 @@ footer {
     justify-content: center;
     align-items: center;
     color: white;
-  
   }
   
   .copy h6 {
